fix/ catPage & card styles (grid+align)

--- a/src/components/CatalogCard/CatalogCard.module.scss
+++ b/src/components/CatalogCard/CatalogCard.module.scss
@@ -3,7 +3,7 @@
 
 .catalogCard {
   width: 100%;
-  height: auto;
+  height: fit-content;
 
   display: flex;
   flex-direction: column;
